# mavr-ums

./: README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 20220320_2a7a6c305711_initial_migration.py
sima_migrations/: env.py
sima_migrations/versions/: 1949aaca5891_first_init.py
tests/: hip73085mod.5.out  hip73085mod.inp  test_ums.py  test_ums_sima_common_coords.py
ums/: __init__.py
ums/common/: functions.py  widgets.py
ums/gui/common/: widgets.py
ums/gui/orvi/: __init__.py  __main__.py  gui.py  image.py  orbitparams.py  plotparams.py  services.py
ums/gui/sima/: __init__.py  __main__.py
ums/gui/sima/common/: for_table.py
ums/gui/sima/widgets/: __init__.py  gui.py  login.py  main.py
ums/gui/sima/widgets/menus/: search.py
ums/orvi/: gui.py  image.py  orbitparams.py  plotparams.py  services.py
ums/sima/: __init__.py  __main__.py  classes.py  connection.py
ums/sima/common/: classes.py  connection.py  coords.py
ums/sima/widgets/: gui.py  main.py
ums/sima/widgets/add/: object.py
