[tool.poetry]
name = "ums"
version = "0.1"
description = "Will be..."
authors = ["Anatoly Beskakotov <beskakotov.as@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
PySide2 = "^5.15.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
orvi = "ums.orvi:run"