[tool.poetry]
name = "ums"
version = "0.0.1"
description = "Will be..."
authors = ["Anatoly Beskakotov <beskakotov.as@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
PySide2 = "^5.15.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
psycopg2 = "^2.9.1"
SQLAlchemy = "^1.4.23"
alembic = "^1.7.1"
keyring = "^23.2.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mavr-orvi = "ums.orvi:run"
mavr-sima = "ums.sima:run"